Feat: Hero Banner

--- a/team.html
+++ b/team.html
@@ -68,18 +68,27 @@
         <section>
             <div class="container">
                 <div class="team-grid">
-                    <!-- Team Member 1 -->
+                    <!-- Team Member: Pranish (now first) -->
                     <div class="team-card">
                         <div class="team-avatar">
-                            <img src="assets/img/sabin.png" alt="Laxmi Prasad Rimal">
+                            <img src="assets/img/pranish.jpg" alt="Pranish Pudasaini">
                         </div>
-                        <h3>Laxmi Prasad Rimal</h3>
-                        <p class="team-role">Frontend and Backend Developer</p>
-                        <p class="team-bio">Specializes in creating seamless user experiences and robust server-side logic. Worked as a Software Developer at Parsedom.</p>
-                        <a href="https://laxmiprasadrimal.com.np/" target="_blank" class="team-link">Personal Website →</a>
+                        <h3>Pranish Pudasaini</h3>
+                        <p class="team-role">Team Lead</p>
+                        <p class="team-bio">Leads the team with a focus on project strategy and execution.</p>
                     </div>
 
-                    <!-- Team Member 2 -->
+                    <!-- Team Member: Laxman (now second) -->
+                    <div class="team-card">
+                        <div class="team-avatar">
+                            <img src="assets/img/laxman.png" alt="Laxman Mangrati">
+                        </div>
+                        <h3>Laxman Mangrati</h3>
+                        <p class="team-role">Management Lead</p>
+                        <p class="team-bio">Manages team operations and project workflows.</p>
+                    </div>
+
+                    <!-- Team Member: Safal (now third) -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <img src="assets/img/safal.jpg" alt="Safal Gautam">
@@ -90,17 +99,7 @@
                         <a href="https://www.linkedin.com/in/safal-gautam/" target="_blank" class="team-link">LinkedIn Profile →</a>
                     </div>
 
-                    <!-- Team Member 3 -->
-                    <div class="team-card">
-                        <div class="team-avatar">
-                            <img src="assets/img/pranish.jpg" alt="Pranish Pudasaini">
-                        </div>
-                        <h3>Pranish Pudasaini</h3>
-                        <p class="team-role">Team Lead</p>
-                        <p class="team-bio">Leads the team with a focus on project strategy and execution.</p>
-                    </div>
-
-                    <!-- Team Member 4 -->
+                    <!-- Team Member: Kushal (now fourth) -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <img src="assets/img/kushal.jpg" alt="Kushal Khadka">
@@ -110,7 +109,18 @@
                         <p class="team-bio">Manages financial operations and co-leads the team to ensure project success.</p>
                     </div>
 
-                    <!-- Team Member 5 -->
+                    <!-- Team Member: Laxmi (now fifth) -->
+                    <div class="team-card">
+                        <div class="team-avatar">
+                            <img src="assets/img/sabin.png" alt="Laxmi Prasad Rimal">
+                        </div>
+                        <h3>Laxmi Prasad Rimal</h3>
+                        <p class="team-role">Frontend and Backend Developer</p>
+                        <p class="team-bio">Specializes in creating seamless user experiences and robust server-side logic. Worked as a Software Developer at Parsedom.</p>
+                        <a href="https://laxmiprasadrimal.com.np/" target="_blank" class="team-link">Personal Website →</a>
+                    </div>
+
+                    <!-- Team Member: Aalok (now sixth) -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <div class="avatar-placeholder"><i class="fa-solid fa-user"></i></div>
@@ -118,16 +128,6 @@
                         <h3>Aalok Nepal</h3>
                         <p class="team-role">Managing Lead</p>
                         <p class="team-bio">Oversees project management and ensures client satisfaction.</p>
-                    </div>
-
-                    <!-- Team Member 6 -->
-                    <div class="team-card">
-                        <div class="team-avatar">
-                            <img src="assets/img/laxman.png" alt="Laxman Mangrati">
-                        </div>
-                        <h3>Laxman Mangrati</h3>
-                        <p class="team-role">Management Lead</p>
-                        <p class="team-bio">Manages team operations and project workflows.</p>
                     </div>
                 </div>
             </div>
