Updated team section with coworker role and descriptions

--- a/team.html
+++ b/team.html
@@ -68,27 +68,18 @@
         <section>
             <div class="container">
                 <div class="team-grid">
-                    <!-- Team Member: Pranish (now first) -->
+                    <!-- Team Member: Pranish  -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <img src="assets/img/pranish.jpg" alt="Pranish Pudasaini">
                         </div>
                         <h3>Pranish Pudasaini</h3>
                         <p class="team-role">Team Lead</p>
-                        <p class="team-bio">Leads the team with a focus on project strategy and execution.</p>
+                        <p class="team-bio">leads the team at Loophole Infotech, guiding projects and ensuring quality work is delivered on time.</p>
                     </div>
 
-                    <!-- Team Member: Laxman (now second) -->
-                    <div class="team-card">
-                        <div class="team-avatar">
-                            <img src="assets/img/laxman.png" alt="Laxman Mangrati">
-                        </div>
-                        <h3>Laxman Mangrati</h3>
-                        <p class="team-role">Management Lead</p>
-                        <p class="team-bio">Manages team operations and project workflows.</p>
-                    </div>
-
-                    <!-- Team Member: Safal (now third) -->
+                 
+                    <!-- Team Member: Safal  -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <img src="assets/img/safal.jpg" alt="Safal Gautam">
@@ -99,17 +90,8 @@
                         <a href="https://www.linkedin.com/in/safal-gautam/" target="_blank" class="team-link">LinkedIn Profile →</a>
                     </div>
 
-                    <!-- Team Member: Kushal (now fourth) -->
-                    <div class="team-card">
-                        <div class="team-avatar">
-                            <img src="assets/img/kushal.jpg" alt="Kushal Khadka">
-                        </div>
-                        <h3>Kushal Khadka</h3>
-                        <p class="team-role">Accounts, Finance and Team Lead</p>
-                        <p class="team-bio">Manages financial operations and co-leads the team to ensure project success.</p>
-                    </div>
 
-                    <!-- Team Member: Laxmi (now fifth) -->
+                    <!-- Team Member: Laxmi  -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <img src="assets/img/sabin.png" alt="Laxmi Prasad Rimal">
@@ -120,14 +102,37 @@
                         <a href="https://laxmiprasadrimal.com.np/" target="_blank" class="team-link">Personal Website →</a>
                     </div>
 
+                       <!-- Team Member: Laxman  -->
+                    <div class="team-card">
+                        <div class="team-avatar">
+                            <img src="assets/img/laxman.png" alt="Laxman Mangrati">
+                        </div>
+                        <h3>Laxman Mangrati</h3>
+                        <p class="team-role">Client Relations Manager</p>
+                        <p class="team-bio">Focuses on maintaining client relationships and ensuring satisfaction.</p>
+                    </div>
+
+
+                    <!-- Team Member: Kushal (now fourth) -->
+                    <div class="team-card">
+                        <div class="team-avatar">
+                            <img src="assets/img/kushal.jpg" alt="Kushal Khadka">
+                        </div>
+                        <h3>Kushal Khadka</h3>
+                        <p class="team-role">Accounts and Finance </p>
+                        <p class="team-bio">Manages financial operations and co-leads the team to ensure project success.</p>
+                    </div>
+
+                    
+
                     <!-- Team Member: Aalok (now sixth) -->
                     <div class="team-card">
                         <div class="team-avatar">
                             <div class="avatar-placeholder"><i class="fa-solid fa-user"></i></div>
                         </div>
                         <h3>Aalok Nepal</h3>
-                        <p class="team-role">Managing Lead</p>
-                        <p class="team-bio">Oversees project management and ensures client satisfaction.</p>
+                        <p class="team-role">Client Relations Manager</p>
+                        <p class="team-bio">Focuses on maintaining client relationships and ensuring satisfaction.</p>
                     </div>
                 </div>
             </div>
